--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -213,7 +213,8 @@
 				visibility: visible;
 				pointer-events: auto;
 				transform: translate(0);
-				opacity: 1;
+				opacity: 1
+				;
 			}
 		}
 	}
