--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -210,7 +210,7 @@
 .vk-footer {
     display: flex;
     gap: rem(30);
-    height: 100%;
+    height: rem(235);
     @media (max-width:$pc){
         display: none; 
     }
