--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,11 @@
 //====================================================================================================
+.page {
+
+    // .page__footer-menu
+    &__footer-menu {
+        @include adaptiveValue("margin-bottom",40,20);
+    }
+}
+
 
 //====================================================================================================
