--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -135,6 +135,7 @@ body {
 
 // Подключение стилей отдельных блоков
 @import "header";
+@import "footer-menu";
 @import "footer";
 
 // Подключение стилей отдельных страниц
