--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,11 +1,385 @@
 //====================================================================================================
-.page {
 
-    // .page__footer-menu
-    &__footer-menu {
-        @include adaptiveValue("margin-bottom",40,20);
+.page {
+		// .page__container
+		&__container {
+            display: flex;
+		}
+
+		// .page__aside
+		&__aside {
+            flex: 0 0 rem(261);
+		}
+
+		// .page__menu
+		&__menu {
+		}
+
+		// .page__content
+		&__content {
+            flex: 1 1 auto;
+            margin-left: rem(32);
+		}
+
+        // .page__footer-menu
+        &__footer-menu {
+            @include adaptiveValue("margin-bottom",40,20);
+        }
+}
+//====================================================================================================
+.menu-page {
+    background: url('@img/menu-bg.jpg') #068292;
+    position: relative;
+    // background-color: #14c0d4;
+	// .menu-page__header
+
+		&__header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: rem(21);
+		}
+
+		// .menu-page__label
+		&__label {
+            font-family: UniSansCaps;
+            font-size: rem(30);
+            font-weight: 900;
+            letter-spacing: 0.75px;
+            color: #fff;
+		}
+
+		// .menu-page__burger
+		&__burger {
+            background-color: #068292;
+            flex: 0 0 rem(36);
+            height: rem(35);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+		}
+
+		// .menu-page__burger-icon
+		&__burger-icon {
+            display: block;
+            position: relative;
+            width: rem(24);
+            height: rem(16);
+            cursor: pointer;
+            z-index: 25;
+            span,
+            &::before,
+            &::after {
+                content: "";
+                transition: all 0.3s ease 0s;
+                left: 0px;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                background-color: #fff;
+            }
+            &::before {
+                top: 0px;
+            }
+            &::after {
+                bottom: 0px;
+            }
+            span {
+                top: calc(50% - 1px);
+            }
+            ._active & {
+                span {
+                    transform: scale(0);
+                }
+                &::before {
+                    transform: rotate(-45deg);
+                    top: calc(50% - 1px);
+                }
+                &::after {
+                    transform: rotate(45deg);
+                    bottom: calc(50% - 1px);
+                }
+            }
+		}
+
+		// .menu-page__body
+		&__body {
+            display: none;
+            padding-bottom: rem(10);
+
+            &._active {
+                display: block;
+            }
+		}
+
+		// .menu-page__list
+		&__list {
+		}
+
+		// .menu-page__item
+		&__item {
+            & > a {
+                color: #fff;
+            }
+            &:not(:last-child) {
+                border-bottom: rem(1) solid #1aa7b9;
+            }
+            // .menu-page__item_parent
+            &_parent {
+                & .menu-page__link {
+                    position: relative;
+                    &::before{
+                        // content:'';
+                        // background-image: url('@img/icons/menu-page-arrow.png');
+                        // background-size: cover;
+                        // width: rem(14);
+                        // height: rem(14);
+                        display: block;
+                        position: absolute;
+                        right: 0;
+                        top: 50%;
+                        transform: translate(-10px, -50%);
+                        font-size: rem(14);
+                    }
+                }
+                @media (any-hover: hover){
+                    &:hover{
+                        .submenu-page__body {
+                            transform: translate(0, 0);
+                            overflow: auto;
+                            pointer-events: all;
+                        }
+                        .menu-page__link {
+                            &::before{
+                                transform: translate(-10px, -50%) rotate(180deg);
+                            }
+                        }
+                    }
+                }
+            }
+		}
+
+		// .menu-page__link
+		&__link {
+            display: block;
+            padding: rem(11) rem(22);
+            font-size: rem(12);
+            font-weight: 300;
+            letter-spacing: 0.3px;
+            &::before{
+                transition: all 0.3s ease 0s;
+                ._active-sub & {
+                    transform: translate(-10px, -50%) rotate(180deg);
+                }
+            }
+
+            @media (any-hover: hover) {
+                &:hover {
+                    background-color: #098494;
+                }
+            }
+		}
+
+		// .menu-page__submenu
+		&__submenu {
+		}
+}
+//====================================================================================================
+.submenu-page {
+    position: absolute;
+    overflow: hidden;
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 100%;
+    transition: transform 0.3s ease 0s;
+
+    // .submenu-page__body
+	&__body {
+        transform: translate(-100%, 0);
+        border: rem(2) solid #098494;
+        background-color: #fff;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: transform 0.3s ease 0s;
+        ._active-sub & {
+            transform: translate(0, 0);
+        }
+	}
+
+		// .submenu-page__list
+		&__list {
+            padding: rem(10) 0;
+            border-bottom: rem(1) solid #dedede;
+            
+		}
+
+		// .submenu-page__item
+		&__item {
+            & > a {
+                color: $accentColor;
+            }
+		}
+
+		// .submenu-page__link
+
+		&__link {
+            display: block;
+            padding: rem(13) rem(13) rem(13) rem(40);
+            transition: all 0.3s ease 0s;
+            @media (any-hover: hover){
+                &:hover{
+                    background-color: #71c7d3;
+                    color: #fff;
+                }
+            }
+		}
+
+		// .submenu-page__product-card
+		&__product-card {
+            padding: 0 rem(9);
+		}
+}
+//====================================================================================================
+.product-card {
+    position: relative;
+    // .product-card__labels
+	&__labels {
+        position: absolute;
+        top: rem(11);
+        left: rem(11);
+	}
+	// .product-card__label
+	&__label {
+        font-weight: 600;
+        background-color: $orangeColor;
+        text-transform: uppercase;
+        color: #fff;
+        height: rem(21);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 rem(15);
+        border-radius: rem(11);
+        &:not(:last-child) {
+            margin-bottom: rem(10);
+        }
+	}
+
+	// .product-card__image
+	&__image {
+        height: rem(195);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: rem(10) 0;
+        img {
+            max-width: 100%;
+            max-height: rem(175);
+        }
+	}
+
+    // .product-card__body
+    &__body {
+        padding: 0 rem(25) rem(15);
     }
+	// .product-card__title
+	&__title {
+        color: $accentColorText;
+        display: block;
+        font-size: rem(16);
+        margin-bottom: rem(13);
+        line-height: math.div(24,16);
+        @media (any-hover: hover){
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+	}
+
+	// .product-card__footer
+	&__footer {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+	}
+
+	// .product-card__add
+	&__add {
+        width: rem(40);
+        height: rem(40);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #e6e6e6;
+        border-radius: 50%;
+        &::before{
+            font-size: rem(23);
+            color: #fff;
+        }
+	}
+
+	// .product-card__price
+	&__price {
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        gap: rem(5);
+        font-size: rem(24);
+        font-weight: 900;
+        &::before{
+            font-size: rem(14);
+        }
+
+        &_old  {
+            text-align: right;
+            text-decoration: line-through;
+            flex: 1 1 100%;
+            font-size: rem(18);
+            font-weight: 300;
+            color: $grayColorText;
+            &::before{
+                font-size: rem(12);
+            }
+    
+        }
+	}
 }
 
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
+
+//====================================================================================================
 
 //====================================================================================================
