--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,7 @@
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
-// @import "fonts/icons";
+@import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
 $fontFamily: "Roboto";
@@ -20,7 +20,9 @@ $fontSize: rem(14); // где 14(px) - размер шрифта по умолч
 // Основные цвета
 $mainColor: #666; // Цвет шрифта по умолчанию
 $accentColor: #1ab9ce;
+
 $grayColorText: #999999;
+$accentColorText: #36949f;
 $orangeColor: #f68038;
 // $secondColor:;
 
