--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,14 @@
 // Заголовки, общие БЄМ блоки и проче...
+.aside-title {
+    font-size: rem(30);
+    font-weight: 900;
+    letter-spacing: 0.75px;
+    color: #dadada;
+    text-transform: uppercase;
+    display: inline-block;
+    @media (any-hover: hover){
+        &:hover{
+            color: $accentColor;
+        }
+    }
+}
