--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -16,22 +16,27 @@
 	}
 }
 
-._icon-arrows:before {
+
+._icon-arrow:before {
 	content: "\e900";
 }
 
-._icon-basket:before {
+._icon-arrow-right:before {
 	content: "\e901";
 }
 
-._icon-rub:before {
+._icon-arrows:before {
 	content: "\e902";
 }
 
-._icon-search:before {
+._icon-basket:before {
 	content: "\e903";
 }
 
 ._icon-quote:before {
 	content: "\e904";
+}
+
+._icon-search:before {
+	content: "\e905";
 }
